Fix sonar issue + add screenshot to README.md